# grasping_pipeline

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  adding_new_estimators.html  adding_new_objects.html  api.html  details_state_machine.html  genindex.html  index.html  installation.html  objects.inv  overview_state_machine.html  package.xml  py-modindex.html  requirements.txt  search.html  searchindex.js  startup.html  test.py
.doctrees/: adding_new_estimators.doctree  adding_new_objects.doctree  api.doctree  details_state_machine.doctree  environment.pickle  index.doctree  installation.doctree  overview_state_machine.doctree  startup.doctree
_autosummary/: check_table_clean.CheckTableClean.html  check_table_clean.RemoveNonTableObjects.html  check_table_clean.html  collision_environment.CollisionEnvironment.html  collision_environment.html  direct_grasppose_estimator.DirectGraspposeEstimatorCaller.html  direct_grasppose_estimator.html  execute_grasp_action_server.ExecuteGraspServer.html  execute_grasp_action_server.html  execute_grasp_action_server.qv_mult.html  find_table_planes.FindTablePlanes.html  find_table_planes.html  grasp_annotator.FailList.html  grasp_annotator.GraspAnnotator.html  grasp_annotator.html  grasp_method_selector.GraspMethodSelector.html  grasp_method_selector.html  grasppose_estimator.FindGrasppointServer.html  grasppose_estimator.html  hsr_wrapper.HSR_wrapper.html  hsr_wrapper.html  image_fetcher.SynchronizedImageFetcher.html  image_fetcher.html  moveit_wrapper.MoveitWrapper.html  moveit_wrapper.html  object_detector.CallObjectDetectorService.html  object_detector.check_label_img.html  object_detector.html  object_detector.visualize_label_image.html  object_detector.visualize_rois.html  place.PlaceObjectServer.html  place.html  pose_estimator.CallPoseEstimatorService.html  pose_estimator.html  robot_control.CheckTopGrasp.html  robot_control.GoBack.html  robot_control.GoToAndLookAtPlacementArea.html  robot_control.GoToNeutral.html  robot_control.GoToNeutralMoveIt.html  robot_control.GoToWaypoint.html  (+44 more)
_sources/: adding_new_estimators.rst.txt  adding_new_objects.rst.txt  api.rst.txt  details_state_machine.rst.txt  overview_state_machine.rst.txt
action/: CreateCollisionEnvironment.action  ExecuteGrasp.action  FindGrasppoint.action  Place.action
config/: config.yaml  find_grasppoint.yaml  grasping_pipeline.rviz  hsrb_result_pred_legend_21.ply  joint_impedance_config.yaml  object_mapping.yaml  placement.cfg  placement_areas.yaml  standard.yaml
diagrams/: Grasping_Pipeline_Interface.drawio
docs/: .gitignore  README.md  build_doc.sh  requirements.txt
grasps/: 002_master_chef_can.npy  003_cracker_box.npy  005_tomato_soup_can.npy  010_potted_meat_can.npy  011_banana.npy  021_bleach_cleanser.npy  024_bowl.npy  035_power_drill.npy  061_foam_brick.npy  fluidcontainer.npy  largerinsefluidabottle.npy  smallsoybrothbottle.npy  transparent_canister.npy
launch/: gpserver.launch  grasping_pipeline_PC.launch  grasping_pipeline_params.launch  grasping_pipeline_robot.launch  grasping_pipeline_servers.launch  grasping_pipeline_servers_matthias.launch  grasping_pipeline_statemachine.launch  no_map_statemachine.launch  sasha_gpt_services.launch  statemachine.launch
models/: 003_cracker_box.stl  005_tomato_soup_can.stl  007_tuna_fish_can.stl  (+12 more)
(+300 files in other folders)
